--- a/popup.html
+++ b/popup.html
@@ -1,35 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="popup.css"/>
+	<link rel="stylesheet" href="./popup.css"/>
 </head>
 <body>
 	<div class="top">
 		<div id="title">
-			<h1>SPARX<span class="blue">BWk</span></h1>
-			<p>By Gwyd<span class="blue">0</span></p>
+			<h1>SPARX<span class="acsent"> BWk</span></h1>
+			<p>By <a href="https://github.com/Gwyd0"  role="button">Gwyd<span class="blue">0</span></a></p>
 		</div>
-		<div class="links">
+		<div id="links">
 			<a href="https://github.com/Gwyd0/Sparx-bwk-extention" role="button">Github</a>
 			<a href="https://www.sparxmaths.uk/student/" role="button">Sparxs Maths</a>
-	  		<a href="#" role="button">Privacy</a>
+	  		<a href="/webpages/privacy.html" target="_blank" role="button">Privacy</a>
 		</div>
-		<div class="settings">
-			<span class="blue head">Settings</span>
+		<div id="settings">
+			<button type="button" class="acsent btn">Settings</button>
+			<div style="display: block;" id="menu0">
+				<label class="container">Bookwork checks
+				  <input type="checkbox" id="checkbox0">
+				  <span class="checkmark"></span>
+				</label>
+				<label class="container">Skip Games
+				  <input type="checkbox" id="checkbox1">
+				  <span class="checkmark"></span>
+				</label>
+				<label class="container">Auto Continue
+				  <input type="checkbox" id="checkbox2">
+				  <span class="checkmark"></span>
+				</label>
+				<label class="container">Auto Login
+				  <input type="checkbox" id="checkbox3">
+				  <span class="checkmark"></span>
+				</label>
+				<label class="container">Dark Mode
+				  <input type="checkbox" id="checkbox4">
+				  <span class="checkmark"></span>
+				</label>
+			</div>
 		</div>
 	</div>
-	<div class="logdiv"> 
-		<span class="head">Logs</span>
-		<span class="log">12:29 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">12:30 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">12:30 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">12:59 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">13:00 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">13:29 [BWC] A99 [ANSWER] 12</span>
-		<span class="log">13:39 [BWC] A99 [ANSWER] 12</span>
+	<div id="logs"> 
+		<button type="button" class="btn">Latest Logs</button>
+		<div style="display: block;" class="scroll" id="menu1">
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 1</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 2</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 3</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 4</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 5</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 6</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 7</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 8</span>
+			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 9</span>
+		</div>
 	</div>
+	<script src="./popup.js"></script>
 </body>
-
 </html>
