--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,7 @@
 			<h1>SPARX<span class="acsent"> BWk</span></h1>
 			<p>By <a href="https://github.com/Gwyd0"  role="button">Gwyd<span class="blue">0</span></a></p>
 		</div>
+		<a href="https://www.freepik.com/icon/integral_9989416">Icons by Freepik</a>
 		<div id="links">
 			<a href="https://github.com/Gwyd0/Sparx-bwk-extention" role="button">Github</a>
 			<a href="https://www.sparxmaths.uk/student/" role="button">Sparxs Maths</a>
