--- a/popup.html
+++ b/popup.html
@@ -7,10 +7,10 @@
 </head>
 <body>
 	<div class="top">
-		<div id="title">
-			<h1>SPARX<span class="acsent"> BWk</span></h1>
-			<p>By <a href="https://github.com/Gwyd0"  role="button">Gwyd<span class="blue">0</span></a></p>
-		</div>
+		<section id="title">
+			<h1 id="content">SPARX <span class="acsent">BWK</span></h1>
+			<p>By <a href="https://github.com/Gwyd0"  role="button">Gwyd<span class="blue">0 V.1.0.1</span></a></p>
+		</section>
 		<a href="https://www.freepik.com/icon/integral_9989416">Icons by Freepik</a>
 		<div id="links">
 			<a href="https://github.com/Gwyd0/Sparx-bwk-extention" role="button">Github</a>
@@ -36,6 +36,10 @@
 				  <input type="checkbox" id="checkbox3">
 				  <span class="checkmark"></span>
 				</label>
+				<div style="display: block;" class="inputs">
+					<input id="usr" type="text" placeholder="Username">
+					<input id="psw" type="password" placeholder="Password">
+				</div>
 				<label class="container">Dark Mode
 				  <input type="checkbox" id="checkbox4">
 				  <span class="checkmark"></span>
@@ -46,15 +50,6 @@
 	<div id="logs"> 
 		<button type="button" class="btn">Latest Logs</button>
 		<div style="display: block;" class="scroll" id="menu1">
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 1</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 2</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 3</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 4</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 5</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 6</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 7</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 8</span>
-			<span class="log" style="user-select: all; cursor: pointer;">[BWC] A99 [ANSWER] 9</span>
 		</div>
 	</div>
 	<script src="./popup.js"></script>
