--- a/webpages/privacy.html
+++ b/webpages/privacy.html
@@ -10,6 +10,7 @@
 		<h3>Privacy Policy</h3>
 		<h1>Data</h1>
 		<p>We do not collect or store any personal data, browsing history, or any information that can personally identify you through SparxBwk</p>
+		<p>Please Note that if autoLogin is enabled that your password and username are stored locally and can be read by other malicious applications</p>
 		<p>In the future, the Extension may collect non-personal information, such as browser version, platform name, display settings, and user filter settings. This data will be used solely for enhancing the Extension's functionality, including implementing new features, improving existing ones, and suggesting default settings for new users. No personally identifiable information or website-specific data will be collected or shared.</p>
 		<h1>Third-Party Services</h1>
 
