--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="./popup.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" integrity="sha384-GvrOXuhMATgEsSwCs4smul74iXGOixntILdUW9XmUC6+HX0sLNAK3q71HotJqlAn" crossorigin="anonymous">
+
+
 </head>
 <body>
 	<div class="top">
@@ -52,6 +55,7 @@
 		<div style="display: block;" class="scroll" id="menu1">
 		</div>
 	</div>
-	<script src="./popup.js"></script>
+	<script src="./popup.js">
+	</script>
 </body>
 </html>
